Fix Structure Block not saving entities into file, Add 26.2 and 1.21.11 compatibility Remove graadle.properties from github, use Sonatype to host artifacts, Set Stonecutter active version to 26.2 (this is cause of comment noise!)